--- a/React-front/src/App.css
+++ b/React-front/src/App.css
@@ -18,13 +18,39 @@
   width: 400px;
 }
 
+.list-active {
+  background-color: #cce5ff;
+  border-color: #b8daff;
+}
+
+.list-preview {
+  padding: 20px;
+  border: 1px solid rgba(0,0,0,0.1);
+}
+
+.list-preview-body {
+  padding-top: 20px;
+}
+
+.list-preview-header {
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+
+.action-button {
+  margin-left: 10px;
+}
+
 .submit-form {
   max-width: 70vw;
   margin: auto;
 }
 
+.toast {
+  margin-top: 20px;
+}
+
 .edit-form {
-  max-width: 300px;
+  max-width: 70vw;
   margin: auto;
 }
 
